<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bbailey4_AndroidFinal</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_gps_default">Load GPS Default: IIT Tower</string>
    <string name="title_activity_crime_list">Crime Search Results</string>
    <string name="action_settings">Settings</string>
    <string name="search_button">Search Near My Location</string>
    <string name="geo_search_button">Search By Address</string>
    <string name="temp_string">Temporary String</string>
    <string name="search_options">Search Options:</string>
    <string name="date_label">Date Since Report:</string>
    <string name="dist_label">Within Distance of:</string>
    <string name="current_loc_label">My Current Location (Latitude, Longitude)</string>
    <string name="city_chicago">City of Chicago</string>
    <string name="city_subhead">Recent Local Crime Search</string>
    <string name="select_address">Select the Correct Address</string>
	<string name="or">OR</string>
	<string name="enter_address">Enter a Chicago Street Address:</string>
    
    <string-array name="distance_array">
        <item>100 Feet</item>
        <item>250 Feet</item>
        <item>500 Feet</item>
        <item>1000 Feet</item>
        <item>&#188; Mile</item>
        <item>&#189; Mile</item>
        <item>1 Mile</item>
    </string-array>
    <string-array name="date_array">
        <item>in Last 2 Weeks</item>
        <item>in Last Month</item>
        <item>in Last 2 Months</item>
        <item>in Last 3 Months</item>
        <item>in Last 6 Months</item>
        <item>in Last Year</item>
    </string-array>

    <string name="title_activity_detail_view">Criminal Record Detail</string>
    <string name="title_activity_address_list">Address Search Results</string>

</resources>