<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">   
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="#FF000A"
        android:text="@string/city_chicago"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/city_subhead"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#AFDFF1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/current_loc_label" />
    
    <TextView
        android:id="@+id/tvGPSLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/temp_string" />
    
    <TextView 
        android:id="@+id/tvProviderAccuracy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="11sp"
        android:text="@string/temp_string" />
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#AFDFF1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />
    
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:layout_span="2"
                android:text="@string/search_options" />
            
        </TableRow>
        
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/dist_label" />
                       
            <Spinner 
	        android:id="@+id/distanceSpinner"
	        android:layout_weight="1" />
            
        </TableRow>
        
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingLeft="5dp"
           		android:paddingRight="5dp"
	            android:text="@string/date_label" />
	    
	        <Spinner 
		        android:id="@+id/dateSpinner"
		        android:layout_weight="1" />
            
        </TableRow>
        
    </TableLayout>
    
    <Button 
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:onClick="searchCrimeData"
        android:text="@string/search_button" />
    
	    <LinearLayout
	        android:id="@+id/geoLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	        android:orientation="vertical" >
	    
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:textSize="21sp"
		        android:gravity="center"
		        android:textColor="#FF0000"
				android:text="@string/or"
		         />
		    
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:paddingLeft="5dp"
		        android:text="@string/enter_address"
		         />
		    
		    <EditText
		        android:inputType="textPostalAddress"
		        android:id="@+id/geoInput"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        ></EditText>
		    
		    <Button 
		        android:id="@+id/geoButton"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="6dp"
		        android:onClick="searchGeoAddress"
		        android:text="@string/geo_search_button" />
	    
	    </LinearLayout>
    
    </LinearLayout> 

</ScrollView>